--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "supervisor index.js"
+    "start": "nodemon index.js"
   },
   "author": "siamul hassan",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "mongoose": "^8.3.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.0",
     "supervisor": "^0.12.0"
   }
 }
